3_CreativeButtons/style.css
body {
    height: 100vh;
    /*display: grid;*/
    /*grid-template-columns: 1fr 1fr 1fr;*/
    /*gap: 1rem;*/
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1em;
    box-sizing: border-box;
}

.container {
    display: flex;
    gap: 1em;
    justify-content: space-between;
    max-width: 100vw;
    padding: 1rem;
}

.bg-black {
    height: 50px;
    padding: 6rem;
    background-color: #222222;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: -10;
}

.bg-white {
    background-color: white;
    height: 100px;
    width: 300px;
}

/******** ROTATE BG  **********/
#rotate_bg {
    text-decoration: none;
    color: #272727;
    font-family: sans-serif;
    font-size: 45px;
    border: 5px solid #272727;
    padding: 40px 80px;
    position: relative;
    overflow: hidden;
    margin: 0.5em;
}

#rotate_bg::before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    background-color: #fff200;
    height: 100%;
    width: 100%;
    z-index: -1;
    transform-origin: bottom left;
    transform: rotate(-90deg);
    transition: transform 1s;
}

#rotate_bg:hover::before {
    transform: rotate(0deg);
}

/******** SWIPE BG  **********/

#swipe-bg {
    margin-top: 0.5em;
    text-decoration: none;
    color: #351435;
    font-family: sans-serif;
    font-size: 40px;
    border: 3px solid #351435;
    padding: 40px 80px;
    position: relative;
    transition: all 1s;
    overflow: hidden;
}

#swipe-bg::before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    background-color: #351435;
    transition: all 1s;
    transform: translate(-100%, -100%);
    /*transform: translateX(-100%);*/
}

#swipe-bg:hover {
    color: #ffffff;
}

#swipe-bg:hover::before {
    transform: translate(0, 0);
    /*transform: translateX(0);*/
}

/******** CROSS BG  **********/

#cross-bg {
    margin-top: 0.5em;
    font-family: sans-serif;
    padding: 40px 80px;
    font-size: 45px;
    text-decoration: none;
    color: #262626;
    letter-spacing: 2px;
    border: 5px solid #262626;
    position: relative;
    transition: all 1s;
}

#cross-bg::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    background-color: #262626;
    transition: all 1s;
    transform: rotateX(90deg);
}

#cross-bg:hover {
    color: #ffffff;
}

#cross-bg::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    background-color: #262626;
    transition: all 1s;
    transform: rotateY(90deg);
}

#cross-bg:hover::before {
    transform: rotateX(0deg);
}

#cross-bg:hover::after {
    transform: rotateY(0deg);
}

/******** STRETCH BG  **********/

#stretch {
    text-decoration: none;
    padding: 40px 80px;
    color: #e1332d;
    border: 3px solid #e1332d;
    text-transform: uppercase;
    font-size: 40px;
    font-family: "roboto";
    font-weight: 300;
    letter-spacing: -2px;
    transition: all 0.5s;
}

#stretch:hover {
    font-weight: 900;
    letter-spacing: 10px;
    border: 7px solid #e1332d;
}

/******** SWIPE TOP **********/

#swipe-top {
    margin-top: 0.5em;
    text-decoration: none;
    color: #351435;
    font-family: sans-serif;
    font-size: 40px;
    border: 3px solid #351435;
    padding: 40px 80px;
    position: relative;
    transition: all 1s;
    overflow: hidden;
}

#swipe-top::before {
    content: 'YEAH';
    color: white;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: #f44336;
    transition: all 1s;
    transform: translateY(-100%);
    /*transform: translateX(-100%);*/
    display: flex;
    align-items: center;
    justify-content: center;
}

#swipe-top:hover::before {
    transform: translateY(0);
}

/******** GLOW  **********/

#glow {
    background-color: #222222;
    text-decoration: none;
    color: white;
    font-family: sans-serif;
    font-size: 40px;
    border: 3px solid white;
    padding: 40px 80px;
    transition: all 0.3s;
    position: relative;
    overflow: hidden;
}

#glow:hover {
    background-color: #f44336;
}

#glow::before {
    content: "";
    background-color: white;
    top: 0;
    left: 0;
    width: 100%;
    height: 50px;
    position: absolute;
    transform: translateX(-100%) rotate(45deg);
    transition: all 0.3s;
}

#glow:hover::before {
    transform: translateX(100%) rotate(45deg);
}

/******** TWO LAYER  **********/

#two-layer {
    text-decoration: none;
    background-color: #262626;
    font-family: sans-serif;
    font-size: 40px;
    border: 4px solid #262626;
    padding: 40px 80px;
    position: relative;
    overflow: hidden;
}

#two-layer::before {
    content: "Hover Me";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #fffa65;
    color: #262626;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 0.5s;
}

#two-layer::after {
    content: "Hover Me";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #fffa65;
    color: #262626;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 0.5s;
    transform: translate(-100%, 100%);
}

#two-layer:hover::before {
    transform: translate(100%, -100%);
}

#two-layer:hover::after {
    transform: translate(0%, 0%);
}

/******** SCALING  **********/

#scaling {
    text-decoration: none;
    color: #262626;
    font-family: sans-serif;
    font-size: 40px;
    border: 3px solid #262626;
    padding: 40px 80px;
    transition: all 0.5s;
    position: relative;
    overflow: hidden;
}

#scaling::before {
    content: "Hover Me";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #262626;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: scale(5);
    opacity: 0;
    transition: all 0.5s;
}

#scaling:hover::before {
    transform: scale(1);
    opacity: 1;
}

/******** CIRCULAR SWAPPING  **********/

#circular-swapping {
    align-self: center;
    border: 2px solid tomato;
    background: none;
    color: tomato;
    padding: 20px 40px;
    font-size: 25px;
    text-transform: uppercase;
    cursor: pointer;
    transition: all 0.5s;
    position: relative;
    overflow: hidden;
}

#circular-swapping:hover {
    color: white;
}

#circular-swapping::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 0;
    background-color: tomato;
    z-index: -1;
    border-radius: 0 0 50% 50%;
    transition: all 0.5s;
}

#circular-swapping:hover::before {
    height: 190%;
}

/******** ROTATING 3 LAYERS  **********/

#rotating-layers {
    padding: 20px 40px;
    text-decoration: none;
    text-transform: uppercase;
    background-color: #f1c40f;
    color: white;
    font-size: 20px;
    letter-spacing: 2px;
    position: relative;
}

#rotating-layers::before {
    content: "button";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #2ce771;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: rotateX(270deg);
    transform-origin: top;
    transition: all 0.5s;
}

#rotating-layers:hover::before {
    transform: rotateX(0deg);
}

#rotating-layers::after {
    content: "button";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: red;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: rotateX(270deg);
    transform-origin: top;
    transition: all 0.5s;
    transition-delay: 0.25s;
}

#rotating-layers:hover::after {
    transform: rotateX(0deg);
}

/******** LEFT RIGHT SWAPPING  **********/

#lr-swapping {
    padding: 20px 40px;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 4px;
    color: transparent;
    border: 3px solid #ff0;
    font-size: 30px;
    position:relative;
}

#lr-swapping::before {
    content: "button";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #363636;
    color: #ff0;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 0.5s;
}

#lr-swapping:hover::before {
    left: 100%;
    transform: scale(0) rotateY(360deg);
    opacity: 0;
}

#lr-swapping::after {
    content: "button";
    position: absolute;
    top: 0;
    left: -100%;
    width: 100%;
    height: 100%;
    background-color: #363636;
    color: #ff0;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: scale(0) rotateY(360deg);
    opacity: 0;
    transition: all 0.5s;
}

#lr-swapping:hover::after {
    left: 0;
    transform: scale(1) rotateY(0deg);
    opacity: 1;
}

/******** CIRCLES TO BACKGROUND  **********/

#circles-bg {
    width: 220px;
    height: 80px;
    color: #ff0;
    background-color: transparent;
    font-size: 26px;
    text-decoration: none;
    text-transform: uppercase;
    text-align: center;
    line-height: 80px;
    transition: all 0.5s;
    position: relative;
}

#circles-bg:hover {
    color: #262626;
    transition-delay: 0.4s;
}

#circles-bg::before,
#circles-bg::after {
    content: "";
    position: absolute;
    top: 50%;
    width: 20px;
    height: 20px;
    background-color: #ff0;
    z-index: -1;
    border-radius: 50%;
    transform: translateY(-50%);
    transition: all 0.3s;
    opacity: 0;
}

#circles-bg::before {
    left: 0;
    box-shadow: -100px 0 0 #ff0;
}

#circles-bg::after {
    right: 0;
    box-shadow: 100px 0 0 #ff0;
}

#circles-bg:hover::before {
    left: 50%;
    box-shadow: 30px 0 0 #ff0;
    transform: translateX(-50%) translateY(-50%);
    opacity: 1;
}

#circles-bg:hover::after {
    right: 50%;
    box-shadow: -30px 0 0 #ff0;
    transform: translateX(50%) translateY(-50%);
    opacity: 1;
}

#circles-bg span {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #ff0;
    border-radius: 8px;
    transform: scale(0);
    transition: all 0.3s;
    z-index: -1;
}

#circles-bg:hover span {
    transform: scale(1);
    transition-delay: 0.4s;
}

